# ZenlessZoneZero-OneDragon

./: .cnb.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  complete_refactor_test_results.json  pyproject.toml  refactor_baseline.json  second_phase_validation.py  simple_validation.py  test_first_phase_validation.py  test_infrastructure_data.json
.claude/: CLAUDE.md
.cnb/: web_trigger.yml
.devin/: wiki.json
.github/: README.md
.github/workflows/: build-release.yml  mirrorchyan_uploading.yml  sync-cnb.yml  test-check.yml  trusted-contributor-close-issue.yml  update-contributors.yml
.hypothesis/constants/: 03a0bc33c3be41ac  07475514dc0bbadb  11a4fb9bf042a054  146ce438f76c65d3  14ce7443b3faf241  1711dca7bbb78b0f  18baa06439e76d96  1a8de65c7d0d6f8b  1dc359315dc82348  1f4b62403fde35c2  23de3c8efc283fa6  2438213548c974ab  25878421010898fc  2ae14f7c2efda9dc  2f95c8527aa42db7  31722252d7529a88  32b05670edd550d5  372ae7d00561b2ec  44b6e1c94304b2f6  4b2003682c360749  4cba0d335ef5671f  4ddf44b43afe2a81  4fec1c7c35b20ce1  58bfffd74f8d33bb  59d5050ac1aebec1  5c8c5670ebfaaf60  651359ef16bca5a1  65505d628273571d  665c23af9b52cee4  70c2241423f14e15  73da70c7e1886f22  75765944c56265f9  76d2e66169330913  7bf5adb4b781ca0c  7cf475ce1c3560a7  86c09021378d7ae8  88b5a483c1ffb5c8  8c9bf3c444239118  8daf6d2c0a8e5a81  8fe6d156c2bcf353  (+22 more)
assets/game_data/: compendium_data.yml
config/: redemption_codes.sample.yml  redemption_codes.yml
config/auto_battle/: 全配队通用.merged.yml  击破站场-强攻速切.merged.yml  异常站场-强攻速切.merged.yml  强攻站场-击破支援速切.merged.yml  自动守护.merged.yml
config/auto_battle_operation/: 仪玄-凸.sample.yml  千夏-特殊攻击.sample.yml  叶瞬光-终结技-起.sample.yml  普罗米亚-长按普攻.sample.yml  柏妮思-短喷.sample.yml  薇薇安-终结技.sample.yml  连携-取消.sample.yml
config/auto_battle_state_handler/: 琉音-好评套路.sample.yml  琉音-送客决策.sample.yml  轮换-紧急-全角色.sample.yml  速切模板-仪玄.sample.yml  速切模板-叶瞬光.sample.yml  速切模板-悠真.sample.yml  速切模板-普罗米亚.sample.yml  速切模板-柏妮思.sample.yml  速切模板-薇薇安.sample.yml
config/world_patrol_route_list/: 航天城_科研院旧址.sample.yml
deploy/: generate_module_manifest.py  module_manifest.py
docs/: 常见问题.md
docs/develop/: README.md  RECRUITING.md  development_workflow.md  折叠区域使用指南.md
docs/game/: README.md
docs/运维指南/: 版本更新.md
skills/agent-definition/: SKILL.md
skills/zzz-od-dev-character/: SKILL.md
skills/zzz-od-dev-cv-method/: SKILL.md
skills/zzz-od-dev-deciding-a-fix/: SKILL.md  design.md
skills/zzz-od-dev-gameplay-onboarding/: SKILL.md  design.md
skills/zzz-od-dev-plugin/: SKILL.md
skills/zzz-od-dev-pr-finishing/: SKILL.md  design.md
skills/zzz-od-dev-pr-review/: SKILL.md  design.md
skills/zzz-od-dev-screen-onboarding/: SKILL.md  convert_to_webp.py  design.md
skills/zzz-od-dev-skill-guide/: SKILL.md  design.md
skills/zzz-od-dev-state-machine/: SKILL.md
skills/zzz-od-miyoushe/: SKILL.md  design.md
tests/: README.md  conftest.py  pytest.ini  run_property_2_test.py  run_property_3_test.py  run_property_4_test.py  run_refactor_tests.py
tools/: manual_verification.py
tools/ci/: get_version.py  prepare_release_assets.py  (+2 more)
(+400 files in other folders)
