[project]
name = "ZenlessZoneZero-OneDragon"
version = "2.0.0"
description = "绝区零 一条龙 | 全自动 | 自动闪避 | 自动每日 | 自动空洞 | 支持手柄"
requires-python = ">=3.11.9,<3.12"
dependencies = [
    "pyside6==6.8.0.2",
    "pyside6-fluent-widgets==1.11.1",
    "pyyaml==6.0.1",
    "opencv-python==4.10.0.84",
    "pyautogui==0.9.54",
    "pynput==1.7.7",
    "onnxruntime-directml==1.18.0",
    "mss==9.0.1",
    "shapely==2.0.4",
    "pyclipper==1.3.0.post5",
    "soundcard==0.4.3",
    "librosa==0.10.2.post1",
    "gensim==4.3.3",
    "pygit2==1.19.0",
    "psutil==7.2.2",
    # pywin32>=312 的 wheel 不再内置 mfc140u.dll，未装 VC++ 2015-2022 Redistributable (x64) 的机器
    # import win32ui 会闪退（issue #2428）；锁 <312 沿用 311（自带 pythonwin/mfc140u.dll）。等上游 build 313 修复后放开。
    "pywin32<312",
]

[dependency-groups]
dev = [
    "colorama==0.4.6",
    "matplotlib==3.10.3",
    "polib==1.2.0",
    "pre-commit==4.6.0",
    "pyinstaller==6.7.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
    "pyuac==0.0.3",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    "pyright>=1.1.411",
]

gamepad = [
    "vgamepad==0.1.0",
]

[tool.uv]
package = false
cache-dir = "./.install/uv_cache"
environments = ["sys_platform == 'win32'"]
default-groups = []

# Ruff configuration
[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # mccabe
    "B",      # bugbear
    "UP",     # pyupgrade
    "SIM",    # simplify
    "TID",    # tidy imports
]
ignore = ["RUF001", "RUF003"]
extend-ignore = [
    "E501",   # line too long - already handled by black style
    "C901",   # method too complex - need refactor
    "SIM102", # nested if statements - maybe more clear to seperate conditions
]

[tool.ruff.format]
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Pyright 配置：供 Claude Code 的 LSP 工具使用（经 `uv run pyright-langserver` 启动，
# 见 .claude/settings.json 的 lspServers；必须走 uv 方式，勿启用官方全局 pyright 插件）。
[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".debug",
    ".install",
    "zzz-od-test",
]
extraPaths = ["src"]  # src-layout + package=false：让 pyright 去 src/ 解析 one_dragon/zzz_od 等导入（同 PYTHONPATH=src 的根因）
# TODO(type-check): typeCheckingMode 暂 off——只用导航（定义/引用/符号），不刷类型诊断。
#   现有代码尚未 type-clean，后续随改造逐步提升 → basic → standard。
typeCheckingMode = "off"

# Pytest 配置：src-layout + package=false，让 pytest 自动把 src/ 加入 sys.path
# (取代 CI 的 PYTHONPATH=src env 和测试文件里手动的 sys.path.insert)
[tool.pytest.ini_options]
pythonpath = ["src"]
